--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,6 @@ jobs:
           SSH_PORT: 22
       - name: update sabine core
         env:
-          GITHUB_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
         run: |
-          ssh prod 'cd sabine/core && git pull && GITHUB_AUTH_TOKEN=$GITHUB_AUTH_TOKEN docker compose up -d --build'
+          ssh prod 'cd sabine/core && git pull && GITHUB_AUTH_TOKEN=$NPM_AUTH_TOKEN docker compose up -d --build'
