fix(ci): correct environment variable export in deployment
- fix SSH command syntax to properly export GITHUB_AUTH_TOKEN
- change from single quotes to double quotes for variable expansion
- use export command to set environment variable in remote shell

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
         run: |
-          ssh prod 'cd sabine/core && git pull && GITHUB_AUTH_TOKEN=$NPM_AUTH_TOKEN docker compose up -d --build'
+          ssh prod "cd sabine/core && git pull && export GITHUB_AUTH_TOKEN=$NPM_AUTH_TOKEN && docker compose up -d --build"
