--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "dependencies": {
-    "@fastify/type-provider-typebox": "^6.1.0",
-    "@iamtraction/google-translate": "^2.0.1",
-    "@prisma/client": "^6.19.0",
-    "@sabinelab/players": "^1.1.1",
-    "@types/express": "^5.0.5",
-    "body-parser": "^2.2.0",
-    "colors": "^1.4.0",
-    "enhanced-ms": "^4.1.0",
-    "fastify": "^5.6.2",
-    "mercadopago": "^2.10.0",
-    "moment": "^2.30.1",
-    "oceanic-transcripts": "^1.1.1",
-    "oceanic.js": "^1.13.0",
-    "stripe": "^19.3.1"
+    "@fastify/type-provider-typebox": "6.1.0",
+    "@iamtraction/google-translate": "2.0.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "7.2.0",
+    "@sabinelab/players": "1.3.6",
+    "@types/express": "5.0.6",
+    "body-parser": "2.2.1",
+    "colors": "1.4.0",
+    "enhanced-ms": "4.1.0",
+    "fastify": "5.6.2",
+    "mercadopago": "2.11.0",
+    "moment": "2.30.1",
+    "oceanic-transcripts": "1.1.1",
+    "oceanic.js": "1.13.0",
+    "redis": "5.10.0",
+    "stripe": "20.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.1",
-    "eslint": "^9.39.1",
-    "globals": "^16.5.0",
-    "prisma": "^6.19.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.4"
+    "@eslint/js": "9.39.2",
+    "@types/node": "25.0.3",
+    "eslint": "9.39.2",
+    "globals": "16.5.0",
+    "prisma": "7.2.0",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.50.0"
   },
   "name": "sabine-core",
   "version": "1.0.0",
@@ -30,10 +33,11 @@
   "scripts": {
     "test": "node  test.ts",
     "start": "node dist/index.js",
-    "dev": "node --watch src/index.ts",
-    "build": "pnpm lint && rm -rf dist && tsc",
+    "dev": "ts-node src/index.ts",
+    "build": "eslint && rm -rf dist && tsc",
     "lint": "eslint",
-    "check-types": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "gen": "prisma generate"
   },
   "keywords": [],
   "author": "",
