--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "@types/express": "5.0.6",
     "body-parser": "2.2.1",
     "colors": "1.4.0",
+    "discord-html-transcripts": "~3.2.0",
     "enhanced-ms": "4.1.0",
     "fastify": "5.6.2",
     "mercadopago": "2.11.0",
     "moment": "2.30.1",
-    "oceanic-transcripts": "1.1.1",
-    "oceanic.js": "1.13.0",
-    "redis": "5.10.0",
     "stripe": "20.1.0"
   },
   "devDependencies": {
     "@eslint/js": "9.39.2",
-    "@types/node": "25.0.3",
+    "@types/bun": "1.3.4",
+    "@typescript/native-preview": "7.0.0-dev.20251217.1",
+    "discord.js": "14.25.1",
     "eslint": "9.39.2",
     "globals": "16.5.0",
     "prisma": "7.2.0",
-    "tsx": "4.21.0",
     "typescript": "5.9.3",
     "typescript-eslint": "8.50.0"
   },
@@ -31,13 +30,13 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "test": "node  test.ts",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "build": "eslint && rm -rf dist && tsc",
+    "test": "bun test.ts",
+    "start": "bun src/index.ts",
+    "dev": "bun --watch src/index.ts",
+    "build": "eslint && tsgo",
     "lint": "eslint",
-    "type-check": "tsc --noEmit",
-    "gen": "prisma generate"
+    "type-check": "tsgo",
+    "gen": "bunx --bun prisma generate"
   },
   "keywords": [],
   "author": "",
