--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2023",
-    "module": "ES2022",
-    "lib": ["ES2023", "DOM"],
+    "target": "ES2024",
+    "module": "esnext",
+    "lib": ["ES2024", "DOM"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -11,8 +11,7 @@
     "resolveJsonModule": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "noEmit": true,
     "moduleResolution": "bundler",
     "paths": {
       "@/*": ["./src/*"],
